--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uptime-agent-mcp",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "MCP Server for uptime-agent.io",
   "license": "MIT",
   "type": "module",
@@ -21,8 +21,8 @@
     "prepare": "npm run build",
     "watch": "tsc --watch",
     "start": "node dist/index.js",
-    "setup": "npm install && npm run build && node setup-claude-server.js",
-    "setup:debug": "npm install && npm run build && node setup-claude-server.js --debug"
+    "setup": "node dist/index.js setup",
+    "setup:debug": "node dist/index.js setup --debug"
   },
   "publishConfig": {
     "access": "public"
